experimental/ir/testdata/options/nested.proto.stderr.txt
error: expected singular message, found repeated `buf.test.Foo`
  --> testdata/options/nested.proto:24:13
   |
24 | option (x).b.a = {};
   |             ^^ field selector requires singular message
...
48 |     optional Foo a = 1;
49 |     repeated Foo b = 2;
   |     ------------ type specified here

error: message field `buf.test.Foo.a` set multiple times
  --> testdata/options/nested.proto:27:8
   |
26 | option (x).a.a = {};
   |        ----- first set here...
27 | option (x).a = {};
   |        ^^^^^ ... also set here
   = note: an option may be set at most once

error: message extension `buf.test.y` set multiple times
  --> testdata/options/nested.proto:31:8
   |
30 | option (x).(y).a = {};
   |        ------- first set here...
31 | option (x).(y) = {};
   |        ^^^^^^^ ... also set here
   = note: an option may be set at most once

error: oneof `buf.test.Foo.k` set multiple times
  --> testdata/options/nested.proto:35:8
   |
34 | option (x).a.a.x = {};
   |        --------- first set here...
35 | option (x).a.a.y = {};
   |        ^^^^^^^^^ ... also set here
   = note: at most one member of a oneof may be set by an option

error: oneof `buf.test.Foo.k` set multiple times
  --> testdata/options/nested.proto:38:8
   |
37 | option (x).a.x.a = {};
   |        ------- first set here...
38 | option (x).a.y.a = {};
   |        ^^^^^^^ ... also set here
   = note: at most one member of a oneof may be set by an option

error: expected singular message, found repeated `buf.test.Foo`
  --> testdata/options/nested.proto:43:17
   |
43 | option (x).a.(z).a = {};
   |                 ^^ field selector requires singular message
44 | option (x).a.(z) = {};
...
62 |     optional Foo y = 1000;
63 |     repeated Foo z = 1000;
   |     ------------ type specified here

encountered 6 errors
